--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">TictactoeMvP</string>
-    <string name="tvWinner">Winner</string>
+    <string name="app_name">TictactoeMVVM</string>
     <string name="tvWinnerViewGroup">is the Winner</string>
     <string name="mniReset">Reset</string>
     <string name="winner">Winner</string>
