--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">TictactoeMVVM</string>
-    <string name="tvWinnerViewGroup">is the Winner</string>
+    <string name="tvWinnerViewGroup" tools:keep="@string/tvWinnerViewGroup">is the Winner</string>
     <string name="mniReset">Reset</string>
-    <string name="winner">Winner</string>
+    <string name="winner" tools:keep="@string/winner">Winner</string>
 </resources>
